--- a/docs/index.css
+++ b/docs/index.css
@@ -25,6 +25,12 @@ h1 {
     margin-bottom: 20px;
 }
 
+h6 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 /* Styling for the image */
 img {
     display: block;
